--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=Digital Garden
+SITE_NAME_HEADER=Ob Garden (.ᓀ · ᓂ )
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=https://my-digital-garden-kumoriris-projects.vercel.app/
 SHOW_CREATED_TIMESTAMP=false
