--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 SITE_NAME_HEADER=Ob Garden (.ᓀ · ᓂ )
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=https://my-digital-garden-kumoriris-projects.vercel.app/
-SHOW_CREATED_TIMESTAMP=true
+SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=true
 NOTE_ICON_DEFAULT=
-NOTE_ICON_TITLE=false
+NOTE_ICON_TITLE=true
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
