--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ SITE_NAME_HEADER=Ob Garden (.ᓀ · ᓂ )
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=https://my-digital-garden-kumoriris-projects.vercel.app/
 SHOW_CREATED_TIMESTAMP=false
-TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
+TIMESTAMP_FORMAT=yyyy年MM月dd日 HH:mm
 SHOW_UPDATED_TIMESTAMP=true
 NOTE_ICON_DEFAULT=
 NOTE_ICON_TITLE=false
