--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-SITE_NAME_HEADER=Ob Garden (.ᓀ · ᓂ )
+SITE_NAME_HEADER=Choon's Garden (.ᓀ · ᓂ )
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=https://my-digital-garden-kumoriris-projects.vercel.app/
 SHOW_CREATED_TIMESTAMP=true
-TIMESTAMP_FORMAT=MMM dd, yyyy HH:mm
+TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=true
 NOTE_ICON_DEFAULT=
 NOTE_ICON_TITLE=false
