--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
-STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
-STYLE_SETTINGS_BODY_CLASSES=mod-macos is-frameless is-hidden-frameless obsidian-app native-scrollbars theme-light is-translucent show-inline-title show-ribbon show-view-header minimal-theme minimal-default-light minimal-dracula-dark minimal-line-nums minimal-readable minimal-light minimal-dark-tonal links-int-on links-ext-on full-width-media minimal-folding chart-default-width table-default-width img-default-width iframe-default-width map-default-width css-settings-manager hide-pro ribbon-default editor-bg-default file-header-default sb-default sb-item-default is-focused
+STYLE_SETTINGS_CSS=
+STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=true
 THEME=https://raw.githubusercontent.com/seanwcom/Red-Graphite-for-Obsidian/HEAD/theme.css
 BASE_THEME=dark
